--- a/spotify.html
+++ b/spotify.html
@@ -6,10 +6,10 @@
     <title>Caleb Z's Website</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://uptownzombi21.github.io/mysite/resource/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="/resource/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link href="https://uptownzombi21.github.io/mysite/resource/cursor.css" rel="stylesheet">
-    <link href="https://uptownzombi21.github.io/mysite/resource/searchdropdown.css" rel="stylesheet">
+    <link href="/resource/cursor.css" rel="stylesheet">
+    <link href="/resource/searchdropdown.css" rel="stylesheet">
   </head>
 
   <body>
@@ -23,7 +23,7 @@
 
           <!-- Button Group -->
           <div class="btn-group">
-            <a href="https://uptownzombi21.github.io/mysite/#" class="btn btn-outline-info" aria-current="page">Home</a>
+            <a href="https://uptownzombi21.github.io/site/#" class="btn btn-outline-info" aria-current="page">Home</a>
             <a href="aboutme.html" class="btn btn-outline-info">About Me</a>
             <a href="#" class="btn btn-outline-info active">Social</a>
             <!-- Dropdown Menu -->
@@ -117,15 +117,15 @@
 
     <!-- JavaScript -->
 
-    <link href="https://uptownzombi21.github.io/mysite/resource/accordianwidth.css" rel="stylesheet">
+    <link href="/resource/accordianwidth.css" rel="stylesheet">
 
 
-    <link href="https://uptownzombi21.github.io/mysite/resource/footer02.css" rel="stylesheet">
+    <link href="/resource/footer02.css" rel="stylesheet">
 
 
-    <script src="https://uptownzombi21.github.io/mysite/resource/searchdropdown.js"></script>
+    <script src="/resource/searchdropdown.js"></script>
 
     <!---bootstrap js-->
-    <script src="https://uptownzombi21.github.io/mysite/resource/bootstrap.bundle.js"></script>
+    <script src="/resource/bootstrap.bundle.js"></script>
   </body>
 </html>
