--- a/sociallinks.lander.html
+++ b/sociallinks.lander.html
@@ -6,10 +6,10 @@
   <title>Caleb Z's Website</title>
 
   <!-- Bootstrap CSS -->
-  <link href="/resource/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="resource/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <link href="/resource/cursor.css" rel="stylesheet">
-  <link href="/resource/searchdropdown.css" rel="stylesheet">
+  <link href="resource/cursor.css" rel="stylesheet">
+  <link href="resource/searchdropdown.css" rel="stylesheet">
 </head>
 
 
@@ -111,16 +111,16 @@
 
     <!-- JavaScript -->
 
-    <link href="/resource/accordianwidth.css" rel="stylesheet">
+    <link href="resource/accordianwidth.css" rel="stylesheet">
 
 
-    <link href="/resource/footer02.css" rel="stylesheet">
+    <link href="resource/footer02.css" rel="stylesheet">
 
 
-    <script src="/resource/searchdropdown.js"></script>
+    <script src="resource/searchdropdown.js"></script>
 
 
-    <script src="/resource/bootstrap.bundle.js"></script>
+    <script src="resource/bootstrap.bundle.js"></script>
 
   </body>
 </html>
