--- a/youareanidiot.html
+++ b/youareanidiot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Page Iframe</title>
+    <title>idiot</title>
     <style>
         /* Make the iframe cover the entire page */
         html, body {
