--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="C:\Dev-Code\Bootstrap%20ui-sandbox\signup.html">Signup</a></li>
+                <li><a class="CLICK ME" href="https://uptownzombi21.github.io/site/youareanidiot.htmll">Signup</a></li>
                 <li><a class="dropdown-item" href="#">aaaa</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                 <li><hr class="dropdown-divider"></li>
