--- a/sociallinks.lander.html
+++ b/sociallinks.lander.html
@@ -34,12 +34,11 @@
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="C:\Dev-Code\Bootstrap%20ui-sandbox\signup.html">Signup</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="https://uptownzombi21.github.io/site/youareanidiot.html">Settings</a></li>
+                <li><a class="dropdown-item" href="#">aaaa</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Separated link</a></li>
-              </ul>
             </div>
           </div>
         </div>
