--- a/sociallinks.lander.html
+++ b/sociallinks.lander.html
@@ -29,7 +29,7 @@
             <a href="#" class="btn btn-outline-info active">Social</a>
             <!-- Dropdown Menu -->
             <div class="btn-group">
-              <button type="button" class="btn btn-outline-info">Settings</button>
+              <button type="button" class="btn btn-outline-info">Files</button>
               <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
