--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="sociallinks.lander.html" class="btn btn-outline-info">Social</a>
             <!-- Dropdown Menu -->
             <div class="btn-group">
-              <button type="button" class="btn btn-outline-info">Settings</button>
+              <button type="button" class="btn btn-outline-info">Files</button>
               <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
